# avr-playground

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  avr.cmake
.github/workflows/: build.yaml
apps/: CMakeLists.txt  Makefile
apps/audio_test/: CMakeLists.txt  Makefile  main.c
apps/blinky/: CMakeLists.txt  main.c
apps/bootjacker/: CMakeLists.txt  README.md  buttons.c  gui.c  gui.h  instructions.h  main.c  spm.c  spm.h
apps/comp2215/: CMakeLists.txt
apps/comp2215/1314/: CMakeLists.txt
apps/comp2215/1314/avr-snake/: CMakeLists.txt
apps/comp2215/1415/: CMakeLists.txt
apps/comp2215/1415/FortunaTetris/: CMakeLists.txt
apps/comp2215/1415/TronFortuna/: CMakeLists.txt
apps/comp2215/1415/lafortuna_snake/: CMakeLists.txt
apps/comp2215/1415/space-invaders/: CMakeLists.txt
apps/comp2215/1819/: CMakeLists.txt
apps/comp2215/1819/snake_fortuna/: CMakeLists.txt
apps/encoder_test/: CMakeLists.txt  Makefile  encoder.c  encoder.h  main.c
apps/fat_test/: CMakeLists.txt  main.c
apps/games/: CMakeLists.txt
apps/games/backgammon/: CMakeLists.txt  main.c
apps/gfx_test/: CMakeLists.txt  main.c
apps/lcd_test/: CMakeLists.txt  main.c
boards/: ilmatto.cmake  ilmatto.mk  lafortuna.cmake  lafortuna.mk
bootloaders/: CMakeLists.txt  Makefile
bootloaders/blinky/: CMakeLists.txt  Makefile  main.c
bootloaders/rwwtest/: CMakeLists.txt  main.c
bootloaders/sdboot/: CMakeLists.txt  Makefile  buttons.c  buttons.h  encoder.c  encoder.h  gui.c  gui.h  main.c  readme.md
bootloaders/sdboot/interactive/: CMakeLists.txt  interactive.c
bootloaders/sdboot/interactive/include/sdboot/: interactive.h
bootloaders/sdboot/stub/: CMakeLists.txt  main.c
interfaces/: CMakeLists.txt
interfaces/blockdev/: CMakeLists.txt
interfaces/blockdev/include/blockdev/: blockdev.h
interfaces/display/: CMakeLists.txt  display.h
interfaces/display/include/display/: display.h
interfaces/font/: CMakeLists.txt
interfaces/font/include/font/: font.h
interfaces/fs/: CMakeLists.txt
interfaces/fs/include/fs/: fs.h
libs/: CMakeLists.txt
libs/ld_debug/: CMakeLists.txt  debug.c
make/: app.mk  bootloader.mk  lib.mk  module.mk  subdirs.mk
make/internal/: targets.mk
modules/: CMakeLists.txt  Makefile  README.md  check_module.sh
modules/blockdev/: CMakeLists.txt  Makefile  blockdev.c  blockdev.h
modules/blockdev/include/blockdev/: blockdev.h
modules/boot/: CMakeLists.txt  boot.c
modules/boot/include/boot/: boot.h
modules/buttons/: CMakeLists.txt  buttons.c
modules/buttons/include/buttons/: buttons.h
modules/fat/: CMakeLists.txt  Makefile  fat.c  fat.h
modules/fat/include/fat/: fat.h
modules/font5x7/: CMakeLists.txt  font5x7.c  font5x7.h  fonts.c
modules/font5x7/include/font/: font5x7.h
modules/fonts/: CMakeLists.txt  Makefile  font5x7.c  font5x7.h  fonts.c  fonts.h  fonts_priv.h
modules/fonts/include/fonts/: fonts.h
modules/gfx/: CMakeLists.txt  gfx.c
modules/gfx/include/gfx/: gfx.h
modules/gui/: CMakeLists.txt  gui.c
modules/gui/include/gui/: gui.h
modules/inputs/: inputs.c
modules/inputs/include/inputs/: inputs.h
modules/lcd/: CMakeLists.txt  Makefile  avrlcd.h  ili934x.h  lcd.c  lcd.h
modules/lcd/include/lcd/: lcd.h
modules/lcd_legacy/: CMakeLists.txt  avrlcd.h  lcd.c
modules/module/: CMakeLists.txt  Makefile  module.c  module.h  module.x  pic.h
modules/module/device-specs/: at90usb1286.spec
modules/module/include/module/: helpers.h  imports.h  module.h  pic.h
modules/module/ldscripts/: module.x
modules/sd/: CMakeLists.txt  Makefile  sd.c  sd.h
modules/sd/include/sd/: sd.h
modules/vfs/: CMakeLists.txt  Makefile  vfs.c  vfs.h
modules/vfs/include/fs/: vfs.h
