add_module(gfx)
target_sources(gfx
    PRIVATE
        gfx.c
)
target_include_directories(gfx
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_modules(gfx
    PRIVATE
        module
)
target_link_libraries(gfx
    PUBLIC
        display
        font
)